--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,7 +6,7 @@ color_scheme: light # "light" (default) and "dark"
 
 gh_edit_link: false
 
-logo: "/assets/images/just-the-docs.svg"
+# logo: "/assets/images/just-the-docs.svg"
 
 search_enabled: false
 
