--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,10 @@
 remote_theme: pmarsceill/just-the-docs
 
+color_scheme: light # "light" (default) and "dark"
+
 title: Bitrix
 
-color_scheme: light # "light" (default) and "dark"
+lang: ru
 
 gh_edit_link: false
 
