--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 remote_theme: pmarsceill/just-the-docs
 
-color_scheme: dark # "light" (default) and "dark"
+color_scheme: light # "light" (default) and "dark"
 
 title: Bitrix Kit
 
