--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -12,7 +12,7 @@ gh_edit_link: false
 
 search_enabled: false
 
-footer_content: Copyright &copy; 2022
+# footer_content: Copyright &copy; 2022
 
 # Styles
 sass:
