--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,11 +11,8 @@ gh_edit_link: false
 # logo: "/assets/images/just-the-docs.svg"
 
 search_enabled: true
-
-kramdown:
-  syntax_highlighter_opts:
-    block:
-      line_numbers: true
+search:
+  button: true
 
 # footer_content: Copyright &copy; 2022
 
