--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,12 +10,13 @@ gh_edit_link: false
 
 # logo: "/assets/images/just-the-docs.svg"
 
+aux_links:
+  "Česnakas on GitHub":
+    - "//github.com/cesnakas"
+
 search_enabled: true
 
 # footer_content: Copyright &copy; 2022
-
-last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
-last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
 
 # Styles
 sass:
