--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,6 +15,9 @@ aux_links:
     - "//github.com/cesnakas"
 
 search_enabled: true
+search:
+  preview_words_before: 3
+  preview_words_after: 3
 
 # footer_content: Copyright &copy; 2022
 
