--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,15 +13,21 @@ gh_edit_link: false
 aux_links:
   "Česnakas on GitHub":
     - "//github.com/cesnakas"
+    
+aux_links_new_tab: true
 
 search_enabled: true
 search:
   preview_words_before: 3
   preview_words_after: 3
+  lang:
+    - en
+    - ru
 
 # footer_content: Copyright &copy; 2022
 
 plugins:
+  - jekyll-seo-tag
   - search:
       lang: 
         - en
