--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ remote_theme: pmarsceill/just-the-docs
 color_scheme: light # "light" (default) and "dark"
 
 ### Main ###
-# title: Bitrix Kit
+title: Bitrix Kit
 lang: ru
 # URL
 permalink: pretty
