--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,7 @@
 ### Theme ###
 remote_theme: pmarsceill/just-the-docs
-color_scheme: light # "light" (default) and "dark"
+# "light" (default) and "dark"
+color_scheme: bitrix
 
 ### Main ###
 title: Bitrix Kit
