--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,29 @@
-# IDE
-.idea/
-.vscode/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# macOS / Windows
+node_modules
 .DS_Store
-__MACOSX
-Thumbs.db
+dist
+dist-ssr
+coverage
+*.local
+pnpm-lock.yaml
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
