--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+cache/
+dist/
+node_modules/
+temp/
+.DS_Store
+*.local
+coverage
+dist-ssr
+pnpm-lock.yaml
+
 # Logs
 logs
 *.log
@@ -6,14 +16,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-node_modules
-.DS_Store
-dist
-dist-ssr
-coverage
-*.local
-pnpm-lock.yaml
 
 /cypress/videos/
 /cypress/screenshots/
